force-app/main/default/objects/RC_student_test__c/RC_student_test__c.object-meta.xml
<CustomObject>
    <label>RC_student_test</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Student Test</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>