force-app/main/default/objects/RC_student_test__c/fields/code_warnings__c.field-meta.xml
<CustomField>
    <fullName>code_warnings__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Displays the number of warning for the code page</description>
    <label>code_warnings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>