force-app/main/default/objects/RC_student_test__c/fields/event_cutoff__c.field-meta.xml
<CustomField>
    <fullName>event_cutoff__c</fullName>
    <label>event_cutoff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>