force-app/main/default/objects/RC_student_test__c/fields/event_id__c.field-meta.xml
<CustomField>
    <fullName>event_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>event_id</label>
    <referenceTo>RC_event__c</referenceTo>
    <relationshipLabel>RC_student_tests</relationshipLabel>
    <relationshipName>RC_student_tests</relationshipName>
    <type>Lookup</type>
</CustomField>