force-app/main/default/objects/RC_student_test__c/fields/isApproved__c.field-meta.xml
<CustomField>
    <fullName>isApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isApproved</label>
    <type>Checkbox</type>
</CustomField>