force-app/main/default/objects/RC_student_test__c/fields/neg_student_cprogram_marks__c.field-meta.xml
<CustomField>
    <fullName>neg_student_cprogram_marks__c</fullName>
    <label>neg_student_cprogram_marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>