force-app/main/default/objects/RC_student_test__c/fields/student_id__c.field-meta.xml
<CustomField>
    <fullName>student_id__c</fullName>
    <label>student_id</label>
    <referenceTo>RC_student__c</referenceTo>
    <relationshipLabel>RC_student_tests</relationshipLabel>
    <relationshipName>RC_student_tests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>