force-app/main/default/objects/RC_student_test__c/fields/student_marks_scored__c.field-meta.xml
<CustomField>
    <fullName>student_marks_scored__c</fullName>
    <label>student_marks_scored</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>