force-app/main/default/objects/RC_student_test__c/fields/student_test_duration__c.field-meta.xml
<CustomField>
    <fullName>student_test_duration__c</fullName>
    <label>student_test_duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>