force-app/main/default/objects/RC_student_test__c/fields/student_test_isStarted__c.field-meta.xml
<CustomField>
    <fullName>student_test_isStarted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>student_test_isStarted</label>
    <type>Checkbox</type>
</CustomField>