force-app/main/default/objects/RC_student_test__c/fields/student_test_start_time__c.field-meta.xml
<CustomField>
    <fullName>student_test_start_time__c</fullName>
    <label>student_test_start_time</label>
    <type>Time</type>
</CustomField>