force-app/main/default/objects/RC_student_test__c/fields/student_test_warning__c.field-meta.xml
<CustomField>
    <fullName>student_test_warning__c</fullName>
    <defaultValue>6</defaultValue>
    <label>student_test_warning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>