force-app/main/default/objects/RC_student_test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>student_id__c</columns>
    <columns>event_id__c</columns>
    <columns>has_cleared_cutoff__c</columns>
    <columns>student_marks_scored__c</columns>
    <columns>student_apti_marks__c</columns>
    <columns>student_cprogram_marks__c</columns>
    <columns>code_warnings__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>has_cleared_cutoff__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>